<resources>
    <string name="app_name">MedellinPlaces</string>
    <string name="descriptionTitle">Descripción:</string>
    <string name="place_icon_description">Imágen del lugar</string>
    <string name="place_name_default">Nombre del lugar</string>
    <string name="place_description_default">Descripción del lugar</string>
    <string name="menu_button_contentDescription">Menu Button</string>
    <string name="place_image_contentDescription">Imágen del lugar</string>
    <string name="name_medellin">Medellín</string>
    <string name="score_title">Calificación promedio:</string>
    <string name="score_default">4.5 / 5.0</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--
    <string-array name="flowers_array">
        <item>Lily</item>
        <item>Poppy</item>
        <item>Sunflower</item>
        <item>Freesia</item>
        <item>Daisy</item>
        <item>Tulip</item>
        <item>Rose</item>
    </string-array>
    -->

</resources>